--- a/.github/workflows/gitstream.yml
+++ b/.github/workflows/gitstream.yml
@@ -38,7 +38,7 @@ jobs:
     steps:
       - name: Evaluate Rules
         # uses: linear-b/gitstream-github-action@stage
-        uses: linear-b/gitstream-github-action@eladushTag
+        uses: linear-b/gitstream-github-action@v1
         id: rules-engine
         with:
           full_repository: ${{ github.event.inputs.full_repository }}
