--- a/.github/workflows/gitstream.yml
+++ b/.github/workflows/gitstream.yml
@@ -41,8 +41,8 @@ jobs:
     name: gitStream workflow automation
     steps:
       - name: Evaluate Rules
-        uses: linear-b/gitstream-github-action@eladushTag
-        # uses: linear-b/gitstream-github-action@v1
+        # uses: linear-b/gitstream-github-action@eladushTag
+        uses: linear-b/gitstream-github-action@v1
         # uses: linear-b/gitstream-github-action@yaaraTag
         id: rules-engine
         with:
