--- a/.github/workflows/gitstream.yml
+++ b/.github/workflows/gitstream.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
       - name: Evaluate Rules
         # uses: linear-b/gitstream-github-action@v1
-        uses: linear-b/gitstream-github-action@YaaronetTag
+        uses: linear-b/gitstream-github-action@stage
         id: rules-engine
         with:
           full_repository: ${{ github.event.inputs.full_repository }}
